﻿تغییرات نگارش 1.0.2: (1394/04/13)
رفع یک مشکل امنیتی و برخی تغییرات کوچک
استفاده از mysqli در کلاس دیتابیس
اصلاح کلاس template

//----------------------------------------------------------------------------------------------//
تغییرات نگارش 1.0.1: (1392/05/12)

اصلاح دسترسی به ادامه پست ها در نسخه موبایل
اصلاح تابع solve_persian
افزودن تابع template_off و رفع مشکل درج کدهای جاوا در صفحات اضافی و بلوک ها
رفع مشکل توابع check_can_gzip و gzip_out
اضافه شدن ثابت disable_gzip در تابع gzip_out
افزودن تگ pre به تابع html_compaction
ویرایش فایل htaccess و تغییر شیوه دریافت آدرس های سئو
اصلاح نام فایل کش تنظیمات پست ها در تابع posts_options
حذف تایید و تاریخ انتشار از کوئری در تابع module_posts_admin_comments
رفع مشکل عنوان فیلدهای اضافی در بخش ارسال و ویرایش پست
رفع مشکل تعداد فیدهای پست ها در تابع module_posts_feed
رفع مشکل اجباری بودن ایمیل در بخش ویرایش نظرات
رفع مشکل دانلود از ماژول فایل ها با دانلود منیجر
حذف آدرس کوتاه حساب کاربری
افزودن سیستم قلاب ها (به صورت آزمایشی)
رفع مشکل captcha