@@ -4,7 +4,10 @@ Apadana CMS is a free CMS that based on php language and it's under GPL V3 LICEN
 
 Server Requirements
 ----------------
-A Server that supports php 5 (We recommand you to use php 5.3.20 or newer)
+PHP 5.3 or newer
+PHP GD extension
+PHP zlib extension
+Mysql 5.5 or newer  
 
 Installation
 ---------------------
@@ -13,15 +16,21 @@ Installation
 3- Go to your Site and INSTALL!!<br/>
 4- ENjoy APAdana!!!!<br/>
 
+Upgrade
+---------------------
+1- Create a full backup!! <br/>
+2- Upload Apadana CMS engine and modules and install files and also index.php file<br/>
+3- Go to http://yoursite.com/Install and Upgrade!!<br/>
+4- ENjoy new Apadana!!!!<br/>
+
 Support Site
 --------------------
-the site of the Apadana DEV TEAM is : www.apadanacms.ir
+the site of the Apadana CMS TEAM is : www.apadanacms.ir
 
 RELEASE NOTES
 --------------------
-For see the realese notes you can use this site.( GITHUB )
-
-ATTENTION: The default Language of Apadana CMS is PERSIAN but we are trying to Convert Apadana TO a GLOBAL CMS.if you want help US and SUPPORT another Language please email : msdn2014@gmail.com
+For see the realese notes you can either see changelog.txt
+For see exact file change you can see apadana github page or use Meld Merge
 
 THANKS FOR USING APADANA CMS
 Apadana Web 2 Dev Team
