@@ -1,4 +1,6 @@
 ﻿تغییرات نگارش 1.0.2: (1394/04/13)
+رفع تمامی باگ های موجود
+جایگزین شدن html_entity_decode با unhtmlentities
 رفع یک مشکل امنیتی و برخی تغییرات کوچک
 استفاده از mysqli در کلاس دیتابیس
 اصلاح کلاس template
